--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,79 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+body {
+  line-height: 1.5;
+  font-family: Georgia, serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+header {
+  background-color: #ffe500;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+
+h1, h2 {
+  font-family: "Sigmar One";
+  color: #b20953;
+}
+
+h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: .3em 0;
+  padding: 0;
+  width: 100%;
+}
+
+nav ul li {
+  display: inline-block;
+  font-size: 1.125rem;
+  margin: 0 0 .3rem;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: white;
+  background-color: #b2a212;
+  padding: .4em .5em;
+  border-radius: 4px;
+}
+
+.navigation a:hover {
+  background-color: #cc1465;
+}
+
+.navigation .current {
+  background-color: #b20953;
+}
+
+main {
+  margin: 0;
+  padding: 0 .75em;
+}
+
+h2 {
+  font-size: 1.875rem;
+}
+
+img {
+  display: block;
+  width: 50%;
+}
+
+footer {
+  display: inline-block;
+  background-color: #ffe500;
+  width: 100%;
+  text-align: center;
+  color: #2f2d13;
+  padding: 0;
+}
