--- a/css/main.css
+++ b/css/main.css
@@ -62,16 +62,24 @@ nav ul li {
 
 main {
   margin: 0;
-  padding: 0 .75em;
+  padding: .75em;
 }
 
 h2 {
   font-size: 1.875rem;
+  margin-top: .5em;
+  margin-bottom: .8em;
+}
+
+main p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 img {
   display: block;
   width: 100%;
+  padding: .5em;
 }
 
 footer {
@@ -81,4 +89,6 @@ footer {
   text-align: center;
   color: #2f2d13;
   padding: 0;
+  margin: 0;
+  line-height: 1;
 }
