--- a/css/main.css
+++ b/css/main.css
@@ -63,25 +63,17 @@ nav ul li {
 
 main {
   margin: 0;
-  padding: .75em;
+  padding: 0 .75em;
 }
 
 h2 {
   font-size: 1.875rem;
-  margin-top: .8em;
-  margin-bottom: .5em;
-  margin-left: .8em;
-}
-
-main p {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 img {
   display: block;
   width: 100%;
-  padding: .5em;
+  padding: .45em;
 }
 
 footer {
